Added standing enemy
This enemy is a shell for all enemies.  Able to take a hit and die.
Doesn't fire back for now.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BasicEnemyBehavior.cs" />
      <Compile Include="Assets\Scripts\BulletScript.cs" />
      <Compile Include="Assets\Scripts\GeneralGunshot.cs" />
      <Compile Include="Assets\Scripts\GeneralPlayer.cs" />
