--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BasicEnemyBehavior.cs" />
      <Compile Include="Assets\Scripts\BulletScript.cs" />
      <Compile Include="Assets\Scripts\GeneralGunshot.cs" />
      <Compile Include="Assets\Scripts\GeneralPlayer.cs" />
